highlighting newNode, fixed findClosestOverlappingNode

--- a/graph-diagram.css
+++ b/graph-diagram.css
@@ -8,6 +8,10 @@ circle.node {
     fill: white;
 }
 
+circle.node.new {
+    stroke: red;
+}
+
 circle.node.highlight {
     stroke: blue;
 }
